--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "stock-portfolio-backend",
-  "private": true,
-  "dependencies": {}
   "name": "stock-portfolio-frontend",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +10,8 @@
     "react-dom": "^16.13.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "kind-of": ">=6.0.3"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
