--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.0",
-    "kind-of": ">=6.0.3"
+    "kind-of": ">=6.0.3",
+    "serialize-javascript": ">=3.1.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
